// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CedarColor overview 1`] = `
<DocumentFragment>
  <table
    class="css-1ea51ic-TableRowContainer"
  >
    <tbody>
      <tr
        class="css-8036ij-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-f6qke8-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-button-primary-hover
            </div>
            <div>
              Text color for the hover state of primary buttons
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #225c4e
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`CedarColor palette 1`] = `
<DocumentFragment>
  <table
    class="css-1yw4z82-CedarColorPalette"
  >
    <colgroup>
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
    </colgroup>
    <tbody>
      <tr
        class="css-8036ij-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-bwhgqt-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-primary
            </div>
            <div>
              The default, primary text color
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #0c0b08
          </div>
        </td>
      </tr>
      <tr
        class="css-1j5pcln-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-1n3jb6n-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-secondary
            </div>
            <div>
              The secondary text color
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #423b2f
          </div>
        </td>
      </tr>
      <tr
        class="css-8036ij-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-1rup1sq-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-brand
            </div>
            <div>
              Text set in our primary brand color
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #113731
          </div>
        </td>
      </tr>
      <tr
        class="css-1j5pcln-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-mj9ojc-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-sale
            </div>
            <div>
              The color of sale text
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #cc0000
          </div>
        </td>
      </tr>
      <tr
        class="css-8036ij-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-dg5tri-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-inverse
            </div>
            <div>
              Text color on dark background
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #f9f8f6
          </div>
        </td>
      </tr>
      <tr
        class="css-1j5pcln-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-2q2vy5-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-disabled
            </div>
            <div>
              The color of text when it is disabled
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #d1cbbd
          </div>
        </td>
      </tr>
      <tr
        class="css-8036ij-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-1wr8o74-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-success
            </div>
            <div>
              Color of success messages
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #2e6b34
          </div>
        </td>
      </tr>
      <tr
        class="css-1j5pcln-BaseCedarColor"
      >
        <td
          class="css-10njmy6-BaseCedarColor"
        >
          <div
            class="css-ztbtlm-BaseCedarColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-nw5jkn-BaseCedarColor"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-105p9tj-BaseCedarColor"
          >
            <div
              class="css-194io1c-BaseCedarColor"
            >
              cdr-color-text-warning
            </div>
            <div>
              Color of warning messages
            </div>
          </div>
        </td>
        <td
          class="css-1dxgcug-BaseCedarColor"
        >
          <div
            class="css-137xj98-BaseCedarColor"
          >
            #854714
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
